@@ -6,20 +6,18 @@ import io.cucumber.java.Scenario;
 import io.cucumber.java.en.Given;
 import io.cucumber.java.en.When;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
 
 public class Steps {
-    public static ThreadLocal<Map<String, String>> currentIterationMap = new ThreadLocal<Map<String, String>>();
-    private static ThreadLocal<String> testDataId = new ThreadLocal<>();
-    private static ThreadLocal<String> scenarioName = new ThreadLocal<>();
-    private static ThreadLocal<String> excel = new ThreadLocal<>();
-    private static ThreadLocal<String> sheet = new ThreadLocal<>();
-    private static ThreadLocal<ArrayList<Map<String, String>>> excelData = new ThreadLocal<ArrayList<Map<String, String>>>() {
-        @Override
-        protected ArrayList<Map<String, String>> initialValue() {
-            return new ArrayList<>();
-        }
-    };
+    public static ThreadLocal<Map<String, String>> currentIterationMap = new ThreadLocal<>();
+    private static final ThreadLocal<String> testDataId = new ThreadLocal<>();
+    private static final ThreadLocal<String> scenarioName = new ThreadLocal<>();
+    private static final ThreadLocal<String> excel = new ThreadLocal<>();
+    private static final ThreadLocal<String> sheet = new ThreadLocal<>();
+    private static final ThreadLocal<ArrayList<Map<String, String>>> excelData = ThreadLocal.withInitial(ArrayList::new);
+
     @Before
     public void readScenarioName(Scenario scenario) {
         testDataId.set(scenario.getName());
@@ -28,7 +26,6 @@ public class Steps {
 
     @Given("A Workbook named {string} and sheetname as{string} is read and to write Data")
     public void aWorkbookNamedAndSheetnameAsIsReadAndToWriteData(String excelName, String sheetName) {
-        //currentIterationMap = null;
         if (scenarioName.get() == null || !sheetName.equals(sheet.get()) || !excelName.equals(excel.get()) || !testDataId.get().equals(scenarioName.get())) {
             excelData.get().addAll(ReadExcel.readData(excelName, sheetName));
         }
@@ -42,7 +39,7 @@ public class Steps {
             }
         }
         if (!removeData.isEmpty()) {
-            excelData.get().remove(removeData.get(0));
+            excelData.get().remove(removeData.getFirst());
         }
         scenarioName.set(testDataId.get());
         sheet.set(sheetName);
@@ -52,8 +49,8 @@ public class Steps {
 
     @When("Read symbol as {string} and orderType as {string} and print values")
     public void readSymbolAsAndOrderTypeAsAndPrintValues(String symbol, String orderType) {
-        symbol=currentIterationMap.get().get(symbol);
-        orderType=currentIterationMap.get().get(orderType);
+        symbol = currentIterationMap.get().get(symbol);
+        orderType = currentIterationMap.get().get(orderType);
         System.out.println(symbol);
         System.out.println(orderType);
     }
